# internal/types/m_p_c_keys/post_derive_mpc_key_parameters.go
@@ -1,0 +1,95 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package m_p_c_keys
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/kashguard/go-mpc-infra/internal/types"
+)
+
+// NewPostDeriveMpcKeyParams creates a new PostDeriveMpcKeyParams object
+// no default values defined in spec.
+func NewPostDeriveMpcKeyParams() PostDeriveMpcKeyParams {
+
+	return PostDeriveMpcKeyParams{}
+}
+
+// PostDeriveMpcKeyParams contains all the bound params for the post derive mpc key operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters postDeriveMpcKey
+type PostDeriveMpcKeyParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  Required: true
+	  In: body
+	*/
+	Body *types.PostDeriveKeyPayload
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewPostDeriveMpcKeyParams() beforehand.
+func (o *PostDeriveMpcKeyParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.PostDeriveKeyPayload
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("body", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("body", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("body", "body", ""))
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *PostDeriveMpcKeyParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// body
+	// Required: true
+
+	// body is validated in endpoint
+	//if err := o.Body.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
